fix the gap of element in nav

--- a/style/index.css
+++ b/style/index.css
@@ -606,6 +606,9 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 1rem;
   width: 100%;
   gap: 2rem;
@@ -648,7 +651,7 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1rem;
+  padding: 0.5rem;
   cursor: pointer;
   color: #66a1ee;
   font-size: 1.4rem;
