--- a/style/layouts/_nav.scss
+++ b/style/layouts/_nav.scss
@@ -2,6 +2,7 @@
    flex-grow: 1;
    display: flex;
    flex-direction: column;
+   justify-content: space-between;
    padding: 1rem;
    width: 100%;
    // height: 100vh;
@@ -27,7 +28,7 @@
       &__item {
          display: flex;
          align-items: center;
-         padding: 1rem;
+         padding: 0.5rem;
          cursor: pointer;
 
          color: #66a1ee;
